# Revature_ATC_Project

./: .gitignore  Dockerfile  Project_2_Requirements.md  Project_2_Requirements_2.md  README.md  docker-compose.yml  output.txt  pyproject.toml  registry.json  setup-dev.ps1  tasklist.md  tasklist.txt  user_stories.txt  visualizations.py
alembic/: env.py
alembic/versions/: 259e1656305e_init.py  338b165af68e_init_2.py  377c88b22e3c_init.py  3d9c3b8209f6_revised.py  437009c7fba0_init.py  4e31e538a741_init.py  57e1c13ccc83_init.py  68d80027b4be_init.py  7fc43cef55e9_init.py  8d62237747a9_init.py  9772f531fa65_init.py  b453438fe8d6_init_2.py  c0a40cb0f4b8_init_67.py  cde4ec4ddd8b_init.py  f4ab8bf85efd_init.py  sql_data.sql
src/: loggin_config.py  main.py  settings.py  temp_endpoint_scheduler.py
src/db/: database.py  deps.py
src/domain/: __init__.py  aircraft.py  airline.py  airport.py  all_schemas.txt  exceptions.py  flight.py  flight_crew.py  in_flight_employee.py  operate.py  operates.py  route.py
src/dto/: __init__.py  aircraft.py  airport.py  flight.py  flight_crew.py  in_flight_employee.py  route.py
src/generators/: flight_crew_generator_service.py  in_flight_employee_generator_service.py
src/repositories/: aircraft_repository.py  aircraft_repository_protocol.py  airline_repository.py  airline_repository_protocol.py  airport_repository.py  airport_repository_protocol.py  flight_crew_repository.py  flight_crew_repository_protocol.py  flight_repository.py  flight_repository_protocol.py  in_flight_employee_repository.py  in_flight_employee_repository_protocol.py  operates_repository.py  operates_repository_protocol.py  route_protocol.py  route_repository.py  route_repository_protocol.py
src/services/: aircraft_generator_service.py  (+17 more)
tests/: possible_tests.py  test_airline_generator.py  test_main.py  test_repos.py  test_repos_2.py
(+14 files in other folders)
