[project]
name = "revature-atc-project"
version = "0.1.0"
description = "Merge Conflict's Project 2 for Revature"
authors = [
    {name = "Navdeep Natt",email = "nattnavdeep41@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.18.3,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "sqlalchemy-utils (>=0.42.1,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "faker (>=40.4.0,<41.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
