[tool.poetry]
name = "revature-atc-project"
version = "0.1.0"
description = "Merge Conflict's Project 2 for Revature"
authors = ["Navdeep Natt <nattnavdeep41@gmail.com>"]
readme = "README.md"
package-mode = false

packages = [
  { include = "db", from = "src" },
  { include = "domain", from = "src" },
  { include = "dto", from = "src" },
  { include = "repositories", from = "src" },
  { include = "services", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
alembic = "^1.18.3"
sqlalchemy = "^2.0.46"
sqlalchemy-utils = "^0.42.1"
pydantic = "^2.12.5"
psycopg = {extras=["binary"], version="^3.3.2"}
fastapi = "^0.128.0"
numpy = "^2.4.1"
pandas = "^3.0.0"
matplotlib = "^3.10.8"
ipykernel = "^7.2.0"
jupyter = "^1.1.1"
uvicorn = "^0.40.0"
faker = "^40.4.0"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"